--- a/src/App.css
+++ b/src/App.css
@@ -19,9 +19,9 @@ li {
 	padding: 0 0 15px 0;
 }
 
-li:last-child {
+/* li:last-child {
 	padding: 0;
-}
+} */
 
 li:first-child {
 	padding: 15px 0;
